<resources>
    <string name="app_name">Scanner</string>

    <!--Navigation Menu-->
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_settings">Settings</string>

    <string name="nav_body_home">Start Scan</string>
    <string name="nav_body_history">History</string>
    <string name="nav_body_settings">App Settings</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--Main-->
    <string name="button_start">START!</string>

    <!--Scan-->
    <string name="button_scan_cancel">Cancel</string>
    <string name="button_scan_finish">Finish</string>
    <string name="msg_no_device_set">No device set yet</string>

    <!--Detail view-->
    <string name="label_detail_pressure_systolic">Systolic</string>
    <string name="label_detail_pressure_systolic_manual">Systolic Manual</string>


    <string name="label_detail_pressure_diastolic">Diastolic</string>
    <string name="label_identifier">Identifier</string>
    <string name="label_detail_pressure_diastolic_manual">Diastolic Manual</string>
    <string name="label_detail_pressure_avg_manual">Avg Pressure Manual</string>
    <string name="label_detail_pressure_avg">Avg Pressure</string>
    <string name="button_detail_save">Save</string>


    <!--settings view-->
    <string name="action_settings">Settings</string>
    <string name="button_discover">Discover Devices</string>
    <string name="label_connection_devices">Connected to: \u0020 </string>

    <string name="device_bt_capability">This devices dosnt support bluetooth</string>
    <string name="msg_enable_bluetooth">BT is off do you what to turn it on ?</string>
    <string name="msg_bt_pairing">Pairing devices\u0020</string>
    <string name="msg_bt_searching">searching...</string>
    <string name="msg_bt_connection_lost">Connection lost</string>
    <string name="msg_bt_discovering_mode">Device is now visible</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dont_save">The scan wasn\'t saved.</string>
    <string name="save">The scan was saved.</string>
    <string name="arm">Arm:  </string>
</resources>
